# Django-rest-optimization

./: .gitignore  Dockerfile  Makefile  commands.md  docker-compose-db.yml  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
src/: celery_app.py
src/apps/clients/: admin.py  models.py
src/apps/clients/migrations/: 0001_initial.py
src/apps/services/: admin.py  models.py  serializsers.py  tasks.py  views.py
src/apps/services/migrations/: 0001_initial.py  0002_subscription_price.py  0003_subscription_comment.py
src/config/: settings.py  urls.py
